--- a/www/styles/angular.css
+++ b/www/styles/angular.css
@@ -1,7 +1,7 @@
-.ng-valid[required] {
+.ng-valid[required] input, input.ng-valid[required] {
     border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid {
+.ng-invalid input, input.ng-invalid {
     border-left: 5px solid #a94442; /* red */
 }
