--- a/www/styles/angular.css
+++ b/www/styles/angular.css
@@ -1,7 +1,10 @@
-.ng-valid[required] input, input.ng-valid[required] {
+.ng-invalid input.ng-invalid {
+    border-left: 5px solid #a94442; /* red */
+}
+.ng-valid[required] input.ng-valid[required] {
     border-left: 5px solid #42A948; /* green */
 }
 
-.ng-invalid input, input.ng-invalid {
-    border-left: 5px solid #a94442; /* red */
+.ng-invalid input.ng-valid[required]{
+    border-left: 5px solid #42A948; /* green */
 }
